// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hero visual snapshots > desktop hero layout matches snapshot 1`] = `
<section
  class="relative hidden h-[70vh] min-h-[500px] w-full sm:block"
>
  <img
    alt="Visual Test Hero Video"
    class="object-cover"
    src="/snap-thumb.jpg"
  />
  <div
    class="absolute inset-0 bg-gradient-to-t from-black via-black/70 via-[25%] to-transparent dark:from-background dark:via-background/70"
  />
  <div
    class="absolute inset-0 bg-gradient-to-r from-black/55 via-black/15 via-[45%] to-transparent dark:from-background/55 dark:via-background/15"
  />
  <div
    class="absolute inset-x-0 top-0 h-24 bg-gradient-to-b from-black/35 to-transparent dark:from-background/35"
  />
  <div
    class="absolute bottom-0 left-0 right-0 px-4 pb-16 sm:px-6"
  >
    <div
      class="mx-auto max-w-7xl"
    >
      <div
        class="max-w-2xl drop-shadow-[0_2px_12px_rgba(0,0,0,0.8)]"
      >
        <div
          class="mb-3 flex flex-wrap items-center gap-2"
        >
          <span
            class="inline-block rounded bg-qube-blue px-3 py-1 font-heading text-sm font-medium text-white"
          >
            Featured
          </span>
          <span
            class="inline-block rounded bg-black/80 px-3 py-1 font-heading text-sm font-medium text-white dark:bg-black/60"
          >
            Getting Started
          </span>
          <span
            class="inline-flex items-center gap-1 rounded bg-black/90 px-3 py-1 font-heading text-sm font-medium text-white dark:bg-black/80"
          >
            <svg
              class="h-3.5 w-3.5"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            12:34
          </span>
        </div>
        <h1
          class="mb-4 font-heading text-3xl font-bold text-white sm:text-5xl"
        >
          Visual Test Hero Video
        </h1>
        <p
          class="mb-6 line-clamp-3 text-base leading-relaxed text-white/80 sm:text-lg"
        >
          A unique description for snapshot testing
        </p>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <a
          class="inline-flex items-center gap-2 rounded-lg bg-sonar-red px-6 py-3 font-heading text-sm font-semibold text-white shadow-lg shadow-sonar-red/25 transition-all duration-200 hover:-translate-y-0.5 hover:bg-sonar-red/85 hover:shadow-xl hover:shadow-sonar-red/35 active:translate-y-0 active:shadow-md active:shadow-sonar-red/20"
          href="/watch/hero-vis-1"
        >
          <svg
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          Watch Now
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero visual snapshots > mobile card layout matches snapshot 1`] = `
<section
  class="pt-20 px-4 sm:hidden"
>
  <div
    class="overflow-hidden rounded-xl bg-n9 border border-n8/60 shadow-xl shadow-black/40"
  >
    <div
      class="relative aspect-video"
    >
      <img
        alt="Visual Test Hero Video"
        class="object-cover"
        src="/snap-thumb.jpg"
      />
    </div>
    <div
      class="p-4"
    >
      <div
        class="mb-3 flex flex-wrap items-center gap-2"
      >
        <span
          class="inline-block rounded bg-qube-blue px-3 py-1 font-heading text-sm font-medium text-white"
        >
          Featured
        </span>
        <span
          class="inline-block rounded bg-n8 px-3 py-1 font-heading text-sm font-medium text-n3"
        >
          Getting Started
        </span>
        <span
          class="inline-flex items-center gap-1 rounded bg-n8 px-3 py-1 font-heading text-sm font-medium text-n3"
        >
          <svg
            class="h-3.5 w-3.5"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          12:34
        </span>
      </div>
      <h2
        class="mb-2 font-heading text-xl font-bold text-n1"
      >
        Visual Test Hero Video
      </h2>
      <p
        class="mb-4 text-sm leading-relaxed text-n4 line-clamp-2"
      >
        A unique description for snapshot testing
      </p>
      <a
        class="flex w-full items-center justify-center gap-2 rounded-lg bg-sonar-red px-6 py-3 font-heading text-sm font-semibold text-white shadow-lg shadow-sonar-red/25 transition-all duration-200 hover:bg-sonar-red/85 active:translate-y-0 active:shadow-md active:shadow-sonar-red/20"
        href="/watch/hero-vis-1"
      >
        <svg
          class="h-5 w-5"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
        Watch Now
      </a>
    </div>
  </div>
</section>
`;
